--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,14 @@
     <link rel="stylesheet" href="/css/services.css">
     <link rel="stylesheet" href="/css/testimonials.css">
     <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/back-to-top.css">
     <link rel="stylesheet" href="/css/swiper.css">
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,500&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     
     <title>OriginSix</title>
   </head>
@@ -89,26 +92,27 @@
       <div class="container grid">
         <header>
           <h2 class="title">Serviços</h2>
-          <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+          <p class="subtitle">Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
         </header>
 
         <div class="cards grid">
           <div class="card">
             <i class="icon-woman-hair"></i>
             <h3 class="title">Terapia capilar</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat amet reprehenderit quibusdam ratione natus distinctio facere sunt officia.</p>
+            <p>Terapia completa para couro cabeludo e fios, protegendo todos os tipos de cabelos, inclusive os longos e finos.</p>
           </div>
 
           <div class="card">
             <i class="icon-trim"></i>
             <h3 class="title">Corte</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat amet reprehenderit quibusdam ratione natus distinctio facere sunt officia.</p>
+            <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
           </div>
 
           <div class="card">
             <i class="icon-cosmetic"></i>
             <h3 class="title">Tratamento</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat amet reprehenderit quibusdam ratione natus distinctio facere sunt officia.</p>
+            <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo 
+              de cabelo.</p>
           </div>
         </div>
       </div>
@@ -128,7 +132,7 @@
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, molestias excepturi maxime quidem vero, quod culpa fugit magni minus
+                  Eu sou cliente do Beautysalon há 5 anos e não troco por nada! Certamente meu cabelo mudou muito depois que comecei a tratar somente com produtos naturais e veganos. São profissionais incríveis e qualificados.   
                 </p>
                 <cite>
                   <img src="https://randomuser.me/api/portraits/women/17.jpg" alt="Foto Wanessa Souza">
@@ -141,7 +145,7 @@
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, molestias excepturi maxime quidem vero, quod culpa fugit magni minus
+                  Eu sou cliente do Beautysalon há 5 anos e não troco por nada! Certamente meu cabelo mudou muito depois que comecei a tratar somente com produtos naturais e veganos. São profissionais incríveis e qualificados.   
                 </p>
                 <cite>
                   <img src="https://randomuser.me/api/portraits/women/82.jpg" alt="Foto Franciele Venega">
@@ -154,7 +158,7 @@
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, molestias excepturi maxime quidem vero, quod culpa fugit magni minus
+                  Eu sou cliente do Beautysalon há 5 anos e não troco por nada! Certamente meu cabelo mudou muito depois que comecei a tratar somente com produtos naturais e veganos. São profissionais incríveis e qualificados.   
                 </p>
                 <cite>
                   <img src="https://randomuser.me/api/portraits/women/2.jpg" alt="Foto Valeska Fabris">
@@ -196,15 +200,46 @@
 
       </div>
     </section>
-    
+
+    <div class="divider-2"></div>
   </main>
-  <!--SWIPER-->
+
+  <!--FOOTER-->
+  <footer class="section">
+    <div class="container grid">
+      <div class="brand">
+        <a class="logo logo-alt" href="#home">
+          beauty<span>salon.</span>
+        </a>
+        <p>©2021 Beautysalon.</p>
+        <p>Todos os direitos reservados.</p>
+      </div>
+      <div class="social">
+        <a href="https://instagram.com" target="_blank">
+          <i class="icon-instagram"></i>
+        </a>
+        <a href="https://facebook.com" target="_blank">
+          <i class="icon-facebook"></i>
+        </a>
+        <a href="https://youtube.com" target="_blank">
+          <i class="icon-youtube"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
+
+  <a href="#home" class="back-to-top">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
+
+  <!--SCRIPTS-->
+  <!--swiper-->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-  <!--SCROLL-REVEAL-->
+  <!--scrollreveal-->
   <script src="https://unpkg.com/scrollreveal"></script>
 
-  <!--MAIN-JS-->
+  <!--mainjs-->
   <script src="/js/main.js"></script>
 
 </body>
