--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
 
   <main>
     <!--HOME-->
-    <section id="home" class="section">
+    <section class="section" id="home" >
       <div class="container grid">
         <div class="image">
           <img
@@ -69,7 +69,7 @@
     <div class="divider-1"></div>
 
     <!--ABOUT-->
-    <section id="about" class="section" >
+    <section class="section" id="about">
       <div class="container grid">
         <div class="image">
           <img src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="3 mulheres sorrindo">
@@ -88,7 +88,7 @@
     <div class="divider-2"></div>
 
     <!--SERVICES-->
-    <section id="services" class="section">
+    <section class="section" id="services">
       <div class="container grid">
         <header>
           <h2 class="title">Serviços</h2>
@@ -121,7 +121,7 @@
     <div class="divider-1"></div>
 
     <!--TESTIMONIALS-->
-    <section id="testimonials" class="section" >
+    <section class="section" id="testimonials" >
       <div class="container">
         <header>
           <h2 class="title">Depoimentos de quem já passou por aqui</h2>
@@ -177,7 +177,7 @@
     <div class="divider-2"></div>
 
     <!--CONTACT-->
-    <section id="contact" class="section" >
+    <section class="section" id="contact" >
       <div class="container grid">
 
 
