--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--ICONS -->
     <link rel="stylesheet" href="/assets/fonts/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <!--SWIPER-->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -27,8 +28,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,500&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    
+  
     <title>OriginSix</title>
   </head>
 <body>
@@ -179,8 +179,6 @@
     <!--CONTACT-->
     <section class="section" id="contact" >
       <div class="container grid">
-
-
         <div class="text">
           <h2 class="title">Entre em contato com a gente</h2>
           <p>Entre em contato com a Beautsalon, queremos tirar suas dúvidas, ouvir suas críticas e sugestões</p>
@@ -215,7 +213,7 @@
         <p>Todos os direitos reservados.</p>
       </div>
       <div class="social">
-        <a href="https://instagram.com" target="_blank">
+        <a href="https://www.instagram.com/rafaelalmendra_/" target="_blank">
           <i class="icon-instagram"></i>
         </a>
         <a href="https://facebook.com" target="_blank">
@@ -240,7 +238,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
 
   <!--mainjs-->
-  <script src="/js/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
