--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <!--SWIPER-->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+/>
 
     <!-- STYLES-->
     <link rel="stylesheet" href="/css/reset.css">
@@ -28,7 +31,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,500&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-  
+
     <title>OriginSix</title>
   </head>
 <body>
@@ -167,9 +170,6 @@
               </blockquote>
             </div>
           </div>
-
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
@@ -232,7 +232,7 @@
 
   <!--SCRIPTS-->
   <!--swiper-->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
   <!--scrollreveal-->
   <script src="https://unpkg.com/scrollreveal"></script>
